# sympais

./: .dockerignore  .flake8  .gitattributes  .gitmodules  .pre-commit-config.yaml  .pylintrc  .style.yapf  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  pyproject.toml  pytype.cfg
.github/workflows/: ci.yaml  dependabot.yaml
examples/: run_sphere_3_dmc.py  run_sphere_3_sympais.py
notebooks/: README.md  getting_started.ipynb  pimais.ipynb  results.ipynb  torus_demo.ipynb  utils.py
scripts/: 2021-05-22_acasxu.sh  2021-05-22_coral.sh  2021-05-22_spheres.sh  2021-05-22_torus.sh  run_all.sh
src/sympais/: algorithm.py  algorithm_test.py  constraint.py  distributions.py  initializer.py  jax_printer.py  logger.py  profiles.py  profiles_test.py  realpaver_solver.py  solver_test.py  types.py  z3_solver.py
src/sympais/experimental/: __init__.py  smt.py  smt_test.py
src/sympais/experiments/: run.py
src/sympais/experiments/conf/: config.yaml
src/sympais/experiments/conf/method/: dmc.yaml  hpimais.yaml  pimais.yaml  stratified.yaml
src/sympais/infer/: importance.py  importance_test.py  mcmc_test.py  utils.py
src/sympais/infer/mcmc/: __init__.py  adaptation.py  hmc.py  hmc_test.py  metropolis.py
src/sympais/methods/: __init__.py  dmc.py  importance.py  methods_test.py  stratified.py
src/sympais/realpaver/: interval_propagation.py  parsetab.py  realpaver_api.py
src/sympais/tasks/: README.md  __init__.py  acasxu.py  base.py  coral.py  cube.py  sphere.py  torus.py  vinci.py
src/sympais/tasks/subjects/: README  runMath.sh
(+103 files in other folders)
